--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,11 @@
             android:label="Detail">
         </activity>
 
+        <activity
+            android:name=".SettingActivity"
+            android:label="Setting">
+        </activity>
+
         <uses-library
             android:name="org.apache.http.legacy"
             android:required="false" />
