--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
 
         <activity
             android:name=".LoginActivity"
-            android:label="@string/title_activity_login">
+            android:label="@string/app_name">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -35,8 +35,12 @@
             android:label="Setting"></activity>
 
         <activity
-            android:name=".GeneralSettingActivity"
+            android:name=".SettingGeneralActivity"
             android:label="General"></activity>
+
+        <activity
+            android:name=".SettingUserInformationActivity"
+            android:label="User information"></activity>
 
         <uses-library
             android:name="org.apache.http.legacy"
