--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,51 +2,46 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="android.app.java.com.duovoc">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
+        android:name=".SessionSharedPreferences"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:name=".SessionSharedPreferences"
         android:theme="@style/AppTheme">
-
         <activity
             android:name=".LoginActivity"
             android:label="@string/app_name">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".ListViewActivity"
-            android:label="Overview"></activity>
-
+            android:label="Overview" />
         <activity
             android:name=".DetailActivity"
-            android:label="Detail"></activity>
-
+            android:label="Detail" />
         <activity
             android:name=".SettingActivity"
-            android:label="Setting"></activity>
-
+            android:label="Setting" />
         <activity
             android:name=".SettingGeneralActivity"
-            android:label="General"></activity>
-
+            android:label="General" />
         <activity
             android:name=".SettingUserInformationActivity"
-            android:label="User information"></activity>
+            android:label="User information" />
 
         <uses-library
             android:name="org.apache.http.legacy"
             android:required="false" />
     </application>
 
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 </manifest>
