--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,17 +7,18 @@ android {
         applicationId "android.app.ks.thinkit.duovoc"
         minSdkVersion 27
         targetSdkVersion 29
-        versionCode 2
-        versionName "2"
+        versionCode 1
+        versionName "1"
         testInstrumentationRunner "androidx.android.app.ks.thinkit.duovoc.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
+            debuggable = false
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
         debug {
-            debuggable = false
+            debuggable = true
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
@@ -29,8 +30,9 @@ android {
         Free {
             buildConfigField "boolean", "PAID", "false"
         }
+
         Paid {
-            applicationId "ks.thinkit.buildvariantstestNoAd"
+            applicationId "free.ks.thinkit.buildvariantstestNoAd"
             buildConfigField "boolean", "PAID", "true"
         }
     }
